fixed overflow

--- a/src/pages/Admin.css
+++ b/src/pages/Admin.css
@@ -32,6 +32,7 @@
   background-color: #fff;
   margin: 20px;
   padding: 20px;
+  overflow: scroll;
 }
 
 .admin-title {
